--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+body{
+  text-align: center;
+}
+h1{
+  width: 10%;
+  margin: 0 auto 0 auto;
+}
+
 .top-container {
   background-color: powderblue;
 }
