--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
 body{
   text-align: center;
   margin: 0;
+  font-family: 'Merriweather', serif;
 }
 h1{
   margin-top: 0;
+  font-family: 'Sacramento', cursive;
+}
+h2{
+  font-family: 'Montserrat', sans-serif;
+}
+h3{
+  font-family: 'Montserrat', sans-serif;
 }
 .top-container {
   background-color: powderblue;
