adding more content and images

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,8 @@ h3{
   padding-top: 100px;
 }
 .middle-container{
-  background-color: red;
-  height: 200px;
-  width: 200px;
 }
 .bottom-container{
-  background-color: yellow;
-  height: 200px;
-  width: 200px;
 }
 .pro{
   text-decoration: underline;
@@ -39,4 +33,10 @@ h3{
   position:absolute;
   bottom: 400px;
   left: 300px;
+}
+.my-photo{
+  border-radius: 100%;
+}
+.developer{
+  border-radius: 100%;
 }
