--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,15 @@ body{
   font-family: 'Merriweather', serif;
 }
 h1{
-  margin-top: 0;
+  margin-top: 50px;
   font-family: 'Sacramento', cursive;
+  /* 1em = 100% = 16px*/ /*5.625em = 562.5% = 90px*/
+  /*rem = root em. It ignores adding the font size from parent element.*/
+  font-size: 5.625rem;
 }
 h2{
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
 }
 h3{
   font-family: 'Montserrat', sans-serif;
@@ -31,7 +35,7 @@ h3{
 }
 .bottom-cloud{
   position:absolute;
-  bottom: 400px;
+  bottom: 150px;
   left: 300px;
 }
 .my-photo{
