--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,8 @@ h3{
   right: 300px;
 }
 .bottom-cloud{
-  position:absolute;
-  bottom: 150px;
+  position: absolute;
+  top: 450px;
   left: 300px;
 }
 .my-photo{
